// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListenerManifestGenerator should list every listener of a module with its factory, sorted by name 1`] = `
"// Generated by \`yarn generate-listeners\` (scripts/scripts.v2/ListenerManifestGenerator.ts).
// Do not edit: add a listener and its \`<Listener>Factory\`, then regenerate.

import type { ListenerManifest } from '#api/core/libs/eventEmitter/ListenerManifest.js';
import { AListener } from './pages/listeners/AListener.js';
import { AListenerFactory } from './pages/factories/AListenerFactory.js';
import { BListener } from './core/listeners/BListener.js';
import { BListenerFactory } from './core/factories/BListenerFactory.js';

const listeners: ListenerManifest = [
{ listener: AListener, factory: () => AListenerFactory.default() },
{ listener: BListener, factory: () => BListenerFactory.default() },
];

export { listeners };
"
`;

exports[`ListenerManifestGenerator should list every listener of a module with its factory, sorted by name 2`] = `
"// Generated by \`yarn generate-listeners\` (scripts/scripts.v2/ListenerManifestGenerator.ts).
// Do not edit: add a listener and its \`<Listener>Factory\`, then regenerate.

import type { ListenerManifest } from '#api/core/libs/eventEmitter/ListenerManifest.js';
import { PkgListener } from './listeners/PkgListener.js';
import { PkgListenerFactory } from './factories/PkgListenerFactory.js';

const listeners: ListenerManifest = [
{ listener: PkgListener, factory: () => PkgListenerFactory.default() },
];

export { listeners };
"
`;
